Updated my reference.

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -499,7 +499,7 @@ An up to date list of Pencil Code contributors can be found at
   joishi  & \htmladdnormallink{Jeff S.\ Oishi}{http://cms.jsoishi.org/} & Bates College\\
   JenSchober & \htmladdnormallink{Jennifer Schober}{https://jennifer-schober.com/} & EPFL, Lausanne \\
   Illarl & Illa R.\ Losada & McDonald Observatory, USA \\
-  Iomsn1 & \htmladdnormallink{Simon Candelaresi}{https://www.gla.ac.uk/schools/mathematicsstatistics/staff/simoncandelaresi/} & University of Glasgow \\
+  Iomsn1 & \htmladdnormallink{Simon Candelaresi}{https://simoncandelaresi.com/} & University of Augsburg \\
   grsarson & \htmladdnormallink{Graeme R. Sarson}{http://www.mas.ncl.ac.uk/~ngrs/home.html} & University of Newcastle\\
   fredgent  & \htmladdnormallink{Frederick Gent}{http://fagent.wikidot.com/} & Aalto University, Espoo\\
   fadiesis  & \htmladdnormallink{Fabio Del Sordo}{http://www.nordita.org/~fabio/} & Nordita, Stockholm \\
