--- a/samples/bonnor_ebert_sphere/README
+++ b/samples/bonnor_ebert_sphere/README
@@ -1,11 +1,11 @@
 Maintainer:
-    Wladimir Lyra <wladimir.lyra/gmail[dot]com>
+    Evangelia Ntormousi <evangelia.ntormousi/sns[dot]it>
 Added:
-    2011-May-13
+    2022-Jun-19
 Status:
-    succeeds # One of [succeeds|failing since <date>|obsolete| ...]
+    Not tested # One of [succeeds|failing since <date>|obsolete| ...]
 Recommended resolution:
     256x256x128 
 Comments:
-    Fiducial 3D non-magnetic baroclinic run of Lyra & Klahr 2011, A&A, 527, 138
+    Test for Bonnor-Ebert sphere collapse
 
