--- a/samples/power_xy/complex/README
+++ b/samples/power_xy/complex/README
@@ -7,8 +7,6 @@ Maintainer:
 Added:
     16-Apr-2025
 Status:
-    Running fails (out of bounds array access) on master
-    Works fine on a branch of mine that does not include the changes from gputestv6
+    succeeds # One of [succeeds|failing since <date>|obsolete| ...]
 Comments:
     Modified samples/conv-slab to test the power_xy subroutine.
-    Reference data are from a version of the code before the gputestv6 merger.
