manual: update URL

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -400,7 +400,7 @@ $\displaystyle##$\hfil\cr>\cr\sim\cr}}}
 
   %\emph{$ $Date$ $,~ $ $Revision$ $}\\
   \today\\
-  \url{http://www.nordita.org/software/pencil-code/}\\
+  \url{https://pencil-code.org}\\
   \url{https://github.com/pencil-code/pencil-code}
 
   \vspace{\stretch{3}}
